--- a/kafka/producer.properties
+++ b/kafka/producer.properties
@@ -18,7 +18,7 @@
 
 # list of brokers used for bootstrapping knowledge about the rest of the cluster
 # format: host1:port1,host2:port2 ...
-bootstrap.servers=st-lcsi01:9092,st-lcsi02:9092,st-lcsi03:9092,st-lcsi04:9092
+bootstrap.servers=ai-linapp1093.statoil.no:9092,ai-linapp1094.statoil.no:9092,ai-linapp1095.statoil.no:9092
 
 # specify the compression codec for all data generated: none, gzip, snappy, lz4
 compression.type=gzip
